# snowday

./: .gitignore  .pylintrc  MANIFEST.in  README.md  main.py  pyproject.toml  run.bat  setup.cfg
snowday/: bgm.py  game.py  main.py  sound.py
snowday/sprites/: crosshair.py  potato.py  potato_gun.py  snowflake.py
tests/: test_snowday.py
