[tool.poetry]
name = "snowday"
version = "0.1.0"
description = "A game for a friend"
authors = ["alexander <alexander@brainslavestudios.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.2"
black = "^20.8b1"

[build-system]
#requires = ["setuptools >= 52.0.0", "wheel"]
#build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
